# gen-ai

./: main.py  pyproject.toml  requirement.txt
chat-models/: HUGGINGFACE.py  chat.py  chatbot.py  localmodel.py  uichatbot.py
cinesage/: core.py
embeddingmodels/: embedding.py
